# SycophancyDosageResponse

./: .env.example  .gitignore  LICENSE  README.md  config.py  data.py  entropy.py  factuality_eval.py  factuality_experiments.ipynb  generator.py  main.py  package_results.sh  pyproject.toml  reasoning_uncertainty.py  requirements.txt  run_all.sh  run_baseline.py  run_baseline.sh  run_reasoning_sycophancy.py  run_sycophancy.py  run_sycophancy.sh  setup_and_run.sh  sycophancy.py  sycophancy_dosage.py  visualize_results.ipynb
experiment_out/ClaudeHaiku/: base_experiment_metadata.pkl  high_uncertainty_queries_sdrc.pkl  medium_uncertainty_queries_sdrc.pkl  very_high_uncertainty_queries_sdrc.pkl
experiment_out/ClaudeHaiku/entropy_bin/: bin_1_repeated.pkl
experiment_out/ClaudeHaiku/uncertainty_buckets/: low_uncertainty_queries.pkl  very_high_uncertainty_queries.pkl  very_low_uncertainty_queries.pkl
experiment_out/ClaudeSonnet/: base_experiment_metadata.pkl  high_uncertainty_queries_sdrc.pkl  low_uncertainty_queries_sdrc.pkl  very_high_uncertainty_queries_sdrc.pkl
experiment_out/GPT5_4/: base_experiment_metadata.pkl  high_uncertainty_queries_sdrc.pkl  low_uncertainty_queries_sdrc.pkl  medium_uncertainty_queries_sdrc.pkl  very_low_uncertainty_queries_sdrc.pkl
experiment_out/GPT5_4Mini/: base_experiment_metadata.pkl  high_uncertainty_queries_sdrc.pkl  medium_uncertainty_queries_sdrc.pkl
experiment_out/GPT5_4Nano/: base_experiment_metadata.pkl  high_uncertainty_queries_sdrc.pkl  low_uncertainty_queries_sdrc.pkl  very_low_uncertainty_queries_sdrc.pkl
(+49 files in other folders)
