[project]
name = "factuality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "bokeh>=3.9.0",
    "datasets>=4.8.4",
    "litellm>=1.83.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.3",
]
